syntax = "proto3";

package proto;

// ------------------- Base -------------------

message Error {
  int32 code = 1;
  string message = 2;
}

message Empty {}

// ------------------- Auth -------------------

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Signup(SignupRequest) returns (SignupResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  Error error = 2;
}

message SignupRequest {
  User data = 1;
}

message SignupResponse {
  string token = 1;
  Error error = 2;
}

// ------------------- User -------------------

service UserService {
  rpc GetByID(GetUserByIDRequest) returns (GetUserByIDResponse) {}
  rpc GetByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse) {}
  rpc Create(CreateUserRequest) returns (CreateUserResponse) {}
  rpc Update(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc Delete(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string last_name = 4;
  string password = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message GetUserByIDRequest {
  string id = 1;
}

message GetUserByIDResponse {
  User data = 1;
  Error error = 2;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  User data = 1;
  Error error = 2;
}

message CreateUserRequest {
  User data = 1;
}

message CreateUserResponse {
  User data = 1;
  Error error = 2;
}

message UpdateUserRequest {
  User data = 1;
}

message UpdateUserResponse {
  User data = 1;
  Error error = 2;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  User data = 1;
  Error error = 2;
}

// ------------------- Budget -------------------

service BudgetService {
  rpc GetBudget(GetBudgetRequest) returns (GetBudgetResponse) {}
  rpc ListBudgets(Empty) returns (ListBudgetsResponse) {}
  rpc CreateBudget(CreateBudgetRequest) returns (CreateBudgetResponse) {}
  rpc AddItem(AddItemRequest) returns (AddItemResponse) {}
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse) {}
  rpc DeleteBudget(DeleteBudgetRequest) returns (DeleteBudgetResponse) {}
}

message Budget {
  string id = 1;
  string name = 2;
  string user_id = 3;
  int32 budget_limit = 4;
  int32 spent = 5;
  int32 remaining = 6;
  string created_at = 7;
  string updated_at = 8;
  repeated BudgetItem items = 9;
}

message BudgetItem {
  string id = 1;
  string city = 2;
  int32 traveling_cost = 3;
  int32 staying_cost = 4;
}

message GetBudgetRequest {
  string id = 1;
}

message GetBudgetResponse {
  Budget data = 1;
  Error error = 2;
}

message ListBudgetsResponse {
  repeated Budget data = 1;
  Error error = 2;
}

message CreateBudgetRequest {
  string user_id = 1;
  int32 budget_limit = 2;
  string budget_name = 3;
}

message CreateBudgetResponse {
  Budget data = 1;
  Error error = 2;
}

message AddItemRequest {
  string budget_id = 1;
  BudgetItem item = 2;
}

message AddItemResponse {
  Budget data = 1;
  Error error = 2;
}

message DeleteItemRequest {
  string budget_id = 1;
  BudgetItem item = 2;
}

message DeleteItemResponse {
  Budget data = 1;
  Error error = 2;
}

message DeleteBudgetRequest {
  string id = 1;
}

message DeleteBudgetResponse {
  Budget data = 1;
  Error error = 2;
}

// ------------------- Country -------------------
service CountryService {
  rpc GetCity(GetCityRequest) returns (GetCityResponse) {}
  rpc ListCities(ListCitiesRequest) returns (ListCitiesResponse) {}
  rpc GetCountry(GetCountryRequest) returns (GetCountryResponse) {}
  rpc ListCountries(ListCountriesRequest) returns (ListCountriesResponse) {}
  rpc GetContinent(GetContinentRequest) returns (GetContinentResponse) {}
  rpc ListContinents(Empty) returns (ListContinentsResponse) {}
}

message Continent {
  int32 id = 1;
  string code = 2;
  string name = 3;
  string created_at = 4;
  string updated_at = 5;
}

message Country {
  int32 id = 1;
  string continent_code = 2;
  string code = 3;
  string name = 4;
  string created_at = 5;
  string updated_at = 6;
}

message City {
  int32 id = 1;
  int32 stay_price = 2;
  int32 travel_price = 3;
  string country = 4;
  string name = 5;
  string created_at = 6;
  string updated_at = 7;
}

message GetCityRequest {
  int32 id = 1;
}

message GetCityResponse {
  City data = 1;
  Error error = 2;
}

message ListCitiesRequest {
  string country = 1;
}

message ListCitiesResponse {
  repeated City data = 1;
  Error error = 2;
}

message GetCountryRequest {
  int32 id = 1;
}

message GetCountryResponse {
  Country data = 1;
  Error error = 2;
}

message ListCountriesRequest {
  string continent = 1;
}

message ListCountriesResponse {
  repeated Country data = 1;
  Error error = 2;
}

message GetContinentRequest {
  int32 id = 1;
}

message GetContinentResponse {
  Continent data = 1;
  Error error = 2;
}

message ListContinentsResponse {
  repeated Continent data = 1;
  Error error = 2;
}